feat(auth0): aplicar mejoras de seguridad y operación
Fortalece el flujo Auth0 en login/callback/logout, endurece validaciones y caché de JWKS, y agrega skills de referencia para prácticas de implementación en el proyecto.

Made-with: Cursor